--- a/netlify.toml
+++ b/netlify.toml
@@ -1,1 +1,13 @@
 
+[build]
+  publish = "."
+  
+[[redirects]]
+  from = "/app"
+  to = "/app/index.html"
+  status = 200
+  
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
